caffeine-meter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caffeine-meter-service
spec:
  selector:
    app: caffeine-meter
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP
