caffeine-meter/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caffeine-gateway
  annotations:
    # On désactive le rewrite-target ou on le précise pour éviter les conflits
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: caffeine-meter-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: caffeine-front-service
            port:
              number: 80
